--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/_GridViewPartial_proyeccion_gastos_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/_GridViewPartial_proyeccion_gastos_det.cshtml
@@ -79,7 +79,7 @@
             });
         });
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor");
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 
 }
