--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Contrato/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Contrato/Nuevo.cshtml
@@ -11,6 +11,7 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Nuevo", "Contrato", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
