--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/MarcacionEmpleado/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/MarcacionEmpleado/Index.cshtml
@@ -12,6 +12,8 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
