--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/MarcacionEmpleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/MarcacionEmpleado/Nuevo.cshtml
@@ -11,7 +11,7 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Nuevo", "MarcacionEmpleado", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
