--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
@@ -27,7 +27,8 @@
 @using (Html.BeginForm("Anular", "Empleado", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdPersona);
-    @Html.HiddenFor(q => q.IdEmpresa);
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpleado);
     <div class="row">
         <div class="col-md-12">
