--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Importar.cshtml
@@ -43,6 +43,9 @@
 
 @using (Html.BeginForm("Importar", "Empleado", FormMethod.Post, new { @role = "form", @id = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
