--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Modificar.cshtml
@@ -22,7 +22,8 @@
     @Html.HiddenFor(q => q.IdSolicitud);
     @Html.HiddenFor(q => q.IdEmpleado);
     @Html.HiddenFor(q => q.IdVacacion);
-    @Html.HiddenFor(q => q.IdEmpresa);
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     if (ViewBag.MensajeSuccess != null)
     {
