--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Facturacion.fa_ProbabilidadCobro_Info
 @{
-    ViewBag.Title = "Nueva probabilidad de cobro";
+    ViewBag.Title = "Modificar probabilidad de cobro";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -16,7 +16,7 @@
         e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
     }
     function OnSelectionChanged(s, e) {
-        s.GetSelectedFieldValues("IdCbteVta", GetSelectedFieldValuesCallback);
+        s.GetSelectedFieldValues("IdString", GetSelectedFieldValuesCallback);
     }
     function GetSelectedFieldValuesCallback(values) {
         //Capture all selected keys
@@ -49,6 +49,8 @@
     function AddFacturas() {
         var datos = {
             IDs: selectedIDs,
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdProbabilidad: $("#IdProbabilidad").val(),
             IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
@@ -74,10 +76,11 @@
         $("#FacturasModal").modal("hide");
     }
 </script>
-@using (Html.BeginForm("Nuevo", "ProbabilidadCobro", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Modificar", "ProbabilidadCobro", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdProbabilidad, new { @id = "IdProbabilidad" })
 
     if (ViewBag.mensaje != null)
     {
@@ -91,6 +94,38 @@
             </div>
         </div>
     }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="row">
+            <div class="col-md-12">
+                <div class="alert alert-success alert-dismissible">
+                    <h4>
+                        <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+                    </h4>
+                </div>
+            </div>
+        </div>
+    }
+
+    <div class="modal fade" id="FacturasModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Facturas</h4>
+                </div>
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_Facturas")
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="AddFacturas();">Aceptar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-10">
@@ -110,6 +145,23 @@
                             }).GetHtml()
                     @Html.ValidationMessageFor(q => q.MostrarNoAsignadas, "", new { @class = "text-danger" })
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <button type="button" class="btn btn-primary" onclick="MostrarModalFacturas()" title="Buscar facturas">
+                    <i class="fa fa-search"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                @Html.Action("GridViewPartial_ProbabilidadCobroDet")
             </div>
         </div>
     </div>
