--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/_GridViewPartial_Facturas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/_GridViewPartial_Facturas.cshtml
@@ -4,7 +4,7 @@
         settings.Name = "GridViewPartial_Facturas";
         settings.CallbackRouteValues = new { Controller = "ProbabilidadCobro", Action = "GridViewPartial_Facturas" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdCbteVta";
+        settings.KeyFieldName = "IdString";
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -29,11 +29,36 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
+        //Configuración checkbox
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowSelectCheckbox = true;
+        settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
 
-        settings.Columns.Add("IdCbteVta", "# Cbte").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdSucursal", "Sucursal").Width = Unit.Percentage(25);
-        settings.Columns.Add("IdBodega", "Bodega").Width = Unit.Percentage(25);
-        settings.Columns.Add("vt_tipoDoc", "Tipo").Width = Unit.Percentage(20);
+        settings.Columns.Add("vt_NumFactura", "# Factura").Width = Unit.Percentage(14);
+        settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "vt_fecha";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = Unit.Percentage(10);
+        });
+        settings.Columns.Add("DiasVencido", "Dias Vencidos").Width = Unit.Percentage(8);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Saldo";
+            column.Caption = "Saldo";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(10);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Total";
+            column.Caption = "Total";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(10);
+        });
+        settings.Columns.Add("vt_Observacion", "Observacion").Width = Unit.Percentage(20);
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
