--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/_GridViewPartial_ProbabilidadCobro.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/_GridViewPartial_ProbabilidadCobro.cshtml
@@ -63,6 +63,7 @@
                 if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
                 {
                     ViewContext.Writer.Write(
+                        Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdProbabilidad = DataBinder.Eval(tc.DataItem, "IdProbabilidad") }) + "&nbsp;" +
                         Html.ActionLink("Anular", "Anular", new{ IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa") , IdProbabilidad = DataBinder.Eval(tc.DataItem, "IdProbabilidad") },
                         new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
@@ -93,7 +94,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "EstadoBool";
+            column.FieldName = "Estado";
             column.Caption = "Estado";
             column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
             column.EditorProperties().CheckBox(sp =>
