--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/_GridViewPartial_ProbabilidadCobroDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/_GridViewPartial_ProbabilidadCobroDet.cshtml
@@ -43,10 +43,31 @@
             //e.NewValues["IdProducto"] = 0;
         };
 
-        settings.Columns.Add("IdCbteVta", "# Cbte").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdSucursal", "Sucursal").Width = Unit.Percentage(25);
-        settings.Columns.Add("IdBodega", "Bodega").Width = Unit.Percentage(25);
-        settings.Columns.Add("vt_tipoDoc", "Tipo").Width = Unit.Percentage(20);
+        settings.Columns.Add("vt_NumFactura", "# Factura").Width = Unit.Percentage(12);
+        settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "vt_fecha";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = Unit.Percentage(8);
+        });
+        settings.Columns.Add("DiasVencido", "Dias Vencidos").Width = Unit.Percentage(8);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Saldo";
+            column.Caption = "Saldo";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Total";
+            column.Caption = "Total";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
+        });
+        settings.Columns.Add("vt_Observacion", "Observacion").Width = Unit.Percentage(30);
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
