--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
@@ -568,7 +568,7 @@
                     </div>*@
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="FechaOP">Hasta*</label>
+                            <label for="FechaOP">Fecha OP*</label>
                             @Html.DevExpress().DateEditFor(q => q.FechaOP, settings =>
                            {
                                settings.Name = "FechaOP";
