--- a/ERP/Core.Erp.Web/Views/Home/Index.cshtml
+++ b/ERP/Core.Erp.Web/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Menú";
-
-    if (string.IsNullOrEmpty(Core.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Web.Helps.SessionFixed.IdEmpresa))
+    ViewBag.Title = "Menu";
+    if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
     }
