--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/Nuevo.cshtml
@@ -20,6 +20,8 @@
 
 @using (Html.BeginForm("Nuevo", "LiquidacionVacaciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdSolicitud, new { @id= "IdSolicitud" });
     @Html.HiddenFor(q => q.IdEmpleado, new { @id = "IdEmpleado" });
 
