--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/Index.cshtml
@@ -1,8 +1,4 @@
-﻿
-
-
-
-﻿@using Core.Erp.Web.Helps
+﻿﻿@using Core.Erp.Web.Helps
 @model Core.Erp.Info.Helps.cl_filtros_Info
 @{
     ViewBag.Title = "Beneficios sociales";
@@ -15,8 +11,8 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Index", "PagoBenediciosSociales", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdTransaccionSession);
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
