--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/Nuevo.cshtml
@@ -10,7 +10,8 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Nuevo", "PagoBenediciosSociales", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-6">
