--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/_GridViewPartial_pago_beneficios.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/_GridViewPartial_pago_beneficios.cshtml
@@ -145,6 +145,7 @@
             });
             column.Width = Unit.Percentage(5);
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
