--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/_GridViewPartial_LiquidacionRetencionClienteXCruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionRetencionCliente/_GridViewPartial_LiquidacionRetencionClienteXCruzar.cshtml
@@ -95,8 +95,7 @@
                 p.DisplayFormatString = "N2";
             });
         });
-
-        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); OnBeginCallback(s,e)}";
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
     });
 }
