--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_008.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_008.cshtml
@@ -89,6 +89,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <label for="no_mostrar_saldo_en_0">@Html.CheckBoxFor(q => q.mostrar_agrupado) Quitar grupos</label>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
             <!-- /.box-body -->
