--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_010.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_010.cshtml
@@ -37,6 +37,17 @@
                             @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="IdCliente">Cliente</label>
+                            @Html.Partial("_CmbCliente_Facturacion", Model.IdCliente)
+                            @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger", @id = "IdCliente" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
                     <div class="col-md-2">
                         <div class="form-group">
                             <label for="">Fecha inicio*</label>
@@ -45,14 +56,14 @@
                                     <i class="fa fa-calendar"></i>
                                 </div>
                                 @Html.DevExpress().DateEditFor(q => q.fecha_ini, settings =>
-                           {
-                               settings.Name = "fecha_ini";
-                               settings.Properties.UseMaskBehavior = true;
-                               settings.Properties.EditFormat = EditFormat.Date;
-                               settings.Properties.EditFormatString = "dd/MM/yyyy";
-                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           }).GetHtml()
+                               {
+                                   settings.Name = "fecha_ini";
+                                   settings.Properties.UseMaskBehavior = true;
+                                   settings.Properties.EditFormat = EditFormat.Date;
+                                   settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                   settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                               }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -81,10 +92,10 @@
                         <div class="form-group">
                             <label for="mostrarAnulados"></label>
                             @Html.DevExpress().CheckBoxFor(q => q.mostrarAnulados, settings =>
-                       {
-                           settings.Name = "mostrarAnulados";
-                           settings.Text = "Mostrar anulados";
-                       }).GetHtml()
+                           {
+                               settings.Name = "mostrarAnulados";
+                               settings.Text = "Mostrar anulados";
+                           }).GetHtml()
                             @Html.ValidationMessageFor(q => q.mostrarAnulados, "", new { @class = "text-danger" })
                         </div>
                     </div>
