--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_015.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_015.cshtml
@@ -113,6 +113,18 @@
                             @Html.ValidationMessageFor(q => q.Check2, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="Check1"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.Check3, settings =>
+                           {
+                               settings.Name = "Check3";
+                               settings.Text = "Filtrar por fecha contable";
+
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.Check3, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.box-body -->
