--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_018.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_018.cshtml
@@ -76,6 +76,18 @@
                     </div>
                     <div class="col-md-2">
                         <div class="form-group">
+                            <label for="Check1"></label>
+                            @Html.DevExpress().CheckBoxFor(q => q.Check1, settings =>
+                           {
+                               settings.Name = "Check1";
+                               settings.Text = "Filtrar por fecha contable";
+
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.Check1, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
                             <label for="mostrarSaldo0"></label>
                             @Html.DevExpress().CheckBoxFor(q => q.mostrarSaldo0, settings =>
                            {
